Miscellaneous code cleanup (#135)